# mail-alias-platform

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmessage  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  daily.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
docs/: README.md  acceptance-criteria-api.md  openapi_api.yaml
docs/templates/: acceptance-criteria.md
libs/: README.md
services/: README.md
services/api/: Dockerfile  main.py
tests/: test_dummy.py
