[tool.poetry]
name = "mail-alias-platform"
version = "0.1.0"
description = "Platform for managing temporary email addresses."
authors = ["Denis Ustinov 83418606+DenisUstinov@users.noreply.github.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
ruff = "^0.14.6"
mypy = "^1.18"
black = "^23.12.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["services/api"]
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
